# riscv-soc

./: .clangd  .gitignore  CMakeLists.txt  Makefile
programs/: hello_world.s
programs/nos/: common.c  common.h  kernel.c  kernel.h  kernel.ld
rtl/: nand_gate.sv  ram.sv  soc.sv
tests/: test_nand_gate.py
tests/verilator/: main.cpp
